manifests/base/storage/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn-system
    app.kubernetes.io/part-of: full-stack-cluster
